Fix overflow bug

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -32,7 +32,7 @@
     grid-template-columns: 1fr 360px
 
   @media screen and (max-width: $break-medium)
-    grid-template-columns: 1fr
+    grid-template-columns: minmax(0, 1fr)
 
 .reset-selection-button-container
   text-align: center
